Fixed chrome alignment issues

--- a/style.css
+++ b/style.css
@@ -622,28 +622,28 @@ li {
 		/* background-color: rgba(90,90,130,0.4); */
 	}
 	.img-left {
-		/* background-color: rgba(90,130,90,0.4); */
+		background-color: rgba(90,130,90,0.4);
 		flex-basis: 48%;
 		color: white;
 		padding-left: calc(6vw - 10px);
 		text-align: right;
 	}
 	.text-right {
-		/* background-color: rgba(130, 90, 90, 0.4); */
+		background-color: rgba(130, 90, 90, 0.4);
 		flex-basis: 35%; 
 		color: white; 
 		padding-left: 2vw;
 		padding-top: 1vh;
 	}
 	.text-left {
-		/* background-color: rgba(130, 90, 90, 0.4); */
+		background-color: rgba(130, 90, 90, 0.4);
 		flex-basis: 35%; 
 		padding-left: calc(6vw-10px);
 		color: white; 
 		padding-top: 1vh;
 	}
 	.img-right {
-		/* background-color: rgba(90,130,90,0.4); */
+		background-color: rgba(90,130,90,0.4);
 		flex-basis: 30%;
 		color: white;
 		padding-left: 2vw;
